--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
   },
   "homepage": "https://github.com/middleware2016/board-rest#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "bookshelf": "^0.10.2",
+    "crypto": "0.0.3",
     "dotenv": "^4.0.0",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "knex": "^0.12.6",
+    "moment": "^2.17.1",
+    "morgan": "^1.7.0",
+    "pg": "^6.1.2",
+    "sqlite3": "^3.1.8"
   }
 }
