--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "homepage": "https://github.com/middleware2016/board-rest#readme",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.2",
     "bookshelf": "^0.10.2",
+    "compression": "^1.6.2",
     "crypto": "0.0.3",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
+    "express-validator": "^3.1.2",
     "knex": "^0.12.6",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
