--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "seeds": "node node_modules/knex/bin/cli.js migrate:latest & node node_modules/knex/bin/cli.js seed:run",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -32,5 +32,9 @@
     "morgan": "^1.7.0",
     "pg": "^6.1.2",
     "sqlite3": "^3.1.8"
+  },
+  "devDependencies": {
+    "mocha": "^3.2.0",
+    "supertest": "^3.0.0"
   }
 }
