--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "express-validator": "^3.1.2",
+    "jsonwebtoken": "^7.3.0",
     "knex": "^0.12.6",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
